clusters/talos-cluster/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  - name: ssh
    port: 22
    targetPort: 2222
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git-ssh.local
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
  - name: ssh
    port: 22
    targetPort: 2222
    protocol: TCP
