clusters/talos-cluster/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "gitea.horus.maix.ovh"
  rules:
  - backendRefs:
    - name: gitea
      port: 3000
